clusters/production/apps/clutterstock-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clutterstock-test
  labels:
    app.kubernetes.io/part-of: clutterstock-test
    pbs.wsh.no/encryption-keyfile: "true"
