clusters/production/apps/clutterstock-test/clutterstock-api-strategy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clutterstock-api
  namespace: clutterstock-test
spec:
  strategy:
    $patch: replace
    type: Recreate
